# humor-generation

./: .gitignore  LICENSE  README.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.toc  main.xdv  pyproject.toml
agent/: agents.py  main.py  models.py  pipeline.py  prompts.py  settings.py
config/: extraction.yaml
configs/: default.yaml  embedding.yaml  extraction.yaml
configs/models/: qwen3-06b-colab.yaml  qwen3-06b.yaml  qwen3-17b-free-think-768x3-probe.yaml  qwen3-17b-free-think-probe.yaml  qwen3-17b-free-think-r4.yaml  qwen3-17b-free-think-r5-budgeted.yaml  qwen3-17b-hpc.yaml  qwen3-4b-free-think-r1-budgeted.yaml  qwen3-4b-hpc.yaml  tiny-cpu.yaml
configs/training/: mrvf_qwen3_0_6b_colab.yaml  mrvf_qwen3_1_7b_h200.yaml  mrvf_qwen3_4b_h200.yaml  mrvf_tiny_cpu.yaml
docs/: evaluation_pipeline.md  main.fls
docs/draft/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib
docs/draft copy rus/: main.bbl  main.fdb_latexmk  main.out  main.tex  main.toc
docs/overview/: code_overview.aux  code_overview.fdb_latexmk  code_overview.fls  code_overview.out  code_overview.tex
docs/paper/: code_overview.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
docs/report/: main.aux  main.fdb_latexmk  (+3 more)
requirements/: colab.txt  cpu.txt  hpc.txt  training-colab.txt  training-cpu.txt  training-hpc.txt  training-vllm.txt  vllm.txt
scripts/: build_data.py  debug_mrvf_tiny.py  evaluate_candidates.py  generate_checkpoint_candidates.py  run_4b_budgeted_pipeline.sh  run_a100_pipeline.sh  run_finalonly_candidates_17b.sh  run_finalonly_candidates_4b.sh  run_finalonly_eval_17b.sh  run_finalonly_eval_4b.sh  run_r4_free_think_pipeline.sh  run_r5_budgeted_think_pipeline.sh  train_mrvf.py  train_sft_baseline.py  upload_checkpoint_to_hf.py
src/: config.py  dataset.py  logging.py  main.py  models.py  paths.py  settings.py  templates.py  test.py
templates/: candidate_prompt.j2  evaluation_system.j2  evaluation_user.j2  extract_system.j2  extract_user.j2  extraction.j2  extraction_system.j2  extraction_user.j2  keyword_query.j2  normalize_system.j2  normalize_user.j2  reference_prompt.j2  reference_query.j2  training_trace_prompt.j2
tests/: test_candidates_pipeline.py  test_data_pipeline.py  test_embeddings_pipeline.py  test_evaluation_pipeline.py  test_jokes_pipeline.py  test_keywords_pipeline.py  test_references_pipeline.py
(+69 files in other folders)
