[project]
name = "humor-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathlib>=1.0.1",
    "pyarrow>=23.0.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.3",
    "structlog>=25.4.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[dependency-groups]
dev = ["ruff>=0.13.0"]
