[project]
name = "humor-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.0.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pathlib>=1.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.3",
    "scikit-learn>=1.8.0",
    "structlog>=25.4.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.13.0"]
