[project]
name = "humor-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.0.1",
    "jinja2>=3.1.6",
    "numpy>=1.26,<2.3",
    "openai>=2.21.0",
    "pathlib>=1.0.1",
    "polars>=1.30,<1.36",
    "pyarrow>=23.0.0",
    "pydantic>=2.10,<=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.3",
    "scikit-learn>=1.8.0",
    "structlog>=25.4.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.13.0"]
cpu = [
    "accelerate>=1.10.0",
    "peft>=0.17.1",
    "pytest>=8.4.2",
    "torch>=2.4.0",
    "transformers>=4.51.0",
    "trl>=0.21.0",
    "tyro>=0.9.0",
    "wandb>=0.21.0",
]
colab = [{ include-group = "cpu" }, "bitsandbytes>=0.47.0", "torchao>=0.16.0"]
hpc = [
    { include-group = "cpu" },
    "bitsandbytes>=0.47.0",
    "safetensors>=0.6.2",
    "torchao>=0.16.0",
]
vllm = ["vllm>=0.11.0"]
